--- a/tt.html
+++ b/tt.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         main div{
-            color:aliceblue;
+            color:blue;
             text-align: center;
             font-family: arial;
         }
@@ -35,6 +35,7 @@
             <div class="title">Unlimited movies,tv shows and more.</div>
             <div class="sub-title">watch any where cancel any time</div>
             <div class="text">ready to watch and enter your email to create your account.</div>
+        jjjjjjjjjjjjjjg
         </main>
     </section>
     
