--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
     </style>
 </head>
-<body background="/public/images/Netflix.jpg.crdownload">
+<body background="/public/asp.png">
     <section>
         <main>
             <div class="title">Unlimited movies,tv shows and more.</div>
